--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ayu",
-  "displayName": "Ayu",
+  "name": "ayu-warm",
+  "displayName": "Ayu-Warm",
   "description": "A simple theme with bright colors and comes in three versions — dark, light and mirage for all day long comfortable work.",
-  "version": "0.18.0",
-  "publisher": "teabyii",
+  "version": "0.21.0",
+  "publisher": "ben",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -29,34 +29,9 @@
   "contributes": {
     "themes": [
       {
-        "label": "Ayu Dark",
-        "uiTheme": "vs-dark",
-        "path": "./ayu-dark.json"
-      },
-      {
-        "label": "Ayu Dark Bordered",
-        "uiTheme": "vs-dark",
-        "path": "./ayu-dark-bordered.json"
-      },
-      {
-        "label": "Ayu Light",
+        "label": "Ayu Warm Light",
         "uiTheme": "vs",
         "path": "./ayu-light.json"
-      },
-      {
-        "label": "Ayu Light Bordered",
-        "uiTheme": "vs",
-        "path": "./ayu-light-bordered.json"
-      },
-      {
-        "label": "Ayu Mirage",
-        "uiTheme": "vs-dark",
-        "path": "./ayu-mirage.json"
-      },
-      {
-        "label": "Ayu Mirage Bordered",
-        "uiTheme": "vs-dark",
-        "path": "./ayu-mirage-bordered.json"
       }
     ],
     "iconThemes": [
