--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Ayu-Warm",
   "description": "A simple theme with bright colors and comes in three versions — dark, light and mirage for all day long comfortable work.",
   "version": "0.21.0",
-  "publisher": "ben",
+  "publisher": "ben14",
   "license": "MIT",
   "repository": {
     "type": "git",
